--- a/VRChat/53/1161853.html
+++ b/VRChat/53/1161853.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/34d02bac3ae4f808674f.js" defer=
+    "https://asset.booth.pm/assets/d0b74dab23351869d989.js" defer=
     "defer" nonce=
-    "i7eZA2bmnIGeYZarxpCVSNkRcM1nS1ORaEIaAYh5ZxU="></script>
+    "XR59Di2/u+ERALbieg4eMitMPKulM2b0CxG+DmvIzjs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"「Schwi | シュヴィ」VRChat 3.0 - NGNL v1.5","description":"ダイナミックボーンの準備完了（ダイナミックボーンの最新バージョンが機能しない場合は、バージョン1.1.8を使用）-連絡先：https://discord.gg/mytQvXZ\n\n【Schwi Dola 3D model | No Game No Life (Avatar3.0 v1.5) 】\n\n■ Includes : Schwi Avatar3.0 VRChat UnityPackage\n■ Includes Blender File\n■ Includes Eye tracking\n■ Includes PhysBones setup\n■ Includes UTS2 Shader\n■ Xiexe Shader\n\n■ Fullbody Tested\n■ Expression menu fully setup.\n■ Package includes Hand Gesture / Emotes for Avatar3.0\n■ Package does not come with Dynamic bones asset, please get this from UnityAssetStore before importing VRC Package otherwise hair dynamics will not work!\n\n\n【シュヴィラ3Dモデル｜ノーゲーム・ノーライフ（Avatar3.0 v1.2） 】\n\n■ 同梱物 Schwi Avatar3.0 VRChat UnityPackageを同梱。\n■ Blender ファイルを含む\n■ アイトラッキングを含む\n■ PhysBonesセットアップを含む\n■ UTS2シェーダーを含む\n■ Xiexeシェーダー\n\n■ フルボディテスト済み\n■ 表情メニューが充実しています。\n■ パッケージには Avatar3.0 用のハンドジェスチャとエモーション■ が含まれています。\nVRC Package をインポートする前に、UnityAssetStore から Dynamic Bones アセットを入手してください。\n","url":"https://booth.pm/ja/items/1161853","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"4500","highPrice":"5700"},"image":"https://booth.pximg.net/c/620x620/b08ef39d-9a86-42e9-9532-d52b3275adae/i/1161853/a12ddd00-3d9d-4487-b006-bfcee3a24675_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="i7eZA2bmnIGeYZarxpCVSNkRcM1nS1ORaEIaAYh5ZxU="></script>
+    nonce="XR59Di2/u+ERALbieg4eMitMPKulM2b0CxG+DmvIzjs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -1159,7 +1159,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;}]"
+    "[{&quot;label&quot;:&quot;I・Doll VOL.68&quot;,&quot;value&quot;:&quot;i-doll68&quot;},{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
